# LazyWSL

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md
src/: config.rs  errors.rs  main.rs  wsl.rs
src/app/: actions.rs  controller.rs  diagnostics.rs  keymaps.rs  mod.rs  reducers.rs  snapshots.rs  state.rs  worker.rs
src/app/components/: modal.rs
src/app/worker/: commands.rs  mod.rs  runner.rs
src/core/: domain.rs  errors.rs  mod.rs
src/ui/: component.rs  mod.rs  theme.rs
src/ui/screens/: help.rs  main.rs  mod.rs  modals.rs
src/ui/widgets/: distro_list.rs  footer.rs  header.rs  mod.rs  notify.rs  status.rs
src/wsl/: client.rs  commands.rs  mock.rs  mod.rs  parser.rs  service.rs  types.rs
