[package]
name = "LazyWSL"
version = "1.0.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
winreg = "0.56.0"
ratatree = { git = "https://github.com/0xDracula/ratatree" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
