[package]
name = "LazyWSL"
version = "2.0.0"
edition = "2024"
description = "A fast TUI for managing WSL distros; run, snapshot, clone, and roll back."
license = "MIT"
repository = "https://github.com/0xDracula/LazyWSL"
readme = "README.md"
keywords = ["wsl", "tui", "windows", "terminal", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
directories = "6.0.0"
ratatui-explorer = "0.3.0"
dirs = "6.0.0"
arboard = "3.6.1"
chrono = "0.4.44"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
